Добавляет разметку хедера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,12 +2,18 @@
     <div class="container">
         <nav class="main-nav">
             <a href="">
-                <img class="logo-image" src="" alt="logo">
+                <picture>
+                    <source srcset="./images/header/logo.png" type="image/png" />
+                    <img src="./images/header/logo.png" alt="иконка" />
+                </picture>
             </a>
             <!-- <div class="logo-temp"></div> -->
             <ul class="site-nav list">
                 <li class="site-nav__item">
                     <a class="site-nav__link" href="">Home</a>
+                    <!-- <svg class="button-icon" width="40" height="40">
+                        <use href='./images/header/sprite-header.svg#icon-menu'></use>
+                    </svg> -->
                 </li>
                 <li class="site-nav__item">
                     <a class="site-nav__link"href="">About us</a>
@@ -22,11 +28,11 @@
         </nav>
         <button class="header__button">
             Buy now
-            <svg class="button-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="717" height="1024" viewBox="0 0 717 1024">
+            <svg class="button-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="4" height="8" viewBox="0 0 717 1024">
                 <title></title>
                 <g id="icomoon-ignore">
                 </g>
-                <path class="logo" fill="none" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="204.8" stroke="#000" d="M106.263 102.4l479.155 409.6-479.155 409.6"></path>
+                <path class="logo" fill="blue" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="204.8" stroke="#000" d="M106.263 102.4l479.155 409.6-479.155 409.6"></path>
             </svg>
         </button>
     </div>
@@ -35,7 +41,7 @@
 <div class="mobile-nav">
     <button class="button">
         Buy now
-        <svg class="button-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="717" height="1024" viewBox="0 0 717 1024">
+        <svg class="button-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="4" height="8" viewBox="0 0 717 1024">
             <title></title>
             <g id="icomoon-ignore">
             </g>
