--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,6 +1,9 @@
 .container {
+margin-right: auto;
+margin-left: auto;
+
   @media screen and (min-width: 320px) {
-    width: 320px;
+    min-width: 320px;
     padding-left: 20px;
     padding-right: 20px;
   }
