--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -1,12 +1,15 @@
 .header {
     background-color: getColor(heroBgrd);
 }
+.header__button {
+    margin-left: auto;
+}
 
 .button-icon {
     width: 4px;
     height: 8px;
     fill: getColor(accent);
-  }
+}
   
 //   .logo-image {
 //     width: 100px;
@@ -14,10 +17,28 @@
 //   }
   
 //   .logo-temp {
-//       width: 199px;
-//       height: 50px;
-//       color: indianred;
-//     }
+    //       width: 199px;
+    //       height: 50px;
+    //       color: indianred;
+    //     }
+.header .container {
+    display: inline-flex;
+    align-items: center;
+
+}
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+
+.site-nav {
+    padding: 0;
+    margin: 0;
+}
+
+.site-nav.list {
+    display: flex;
+}
 
 .site-nav__link {
     text-decoration: none;
@@ -25,6 +46,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.31;
+    margin: 15px 35px 15px 0;
 
     color: getColor(btncolor);
   
@@ -47,3 +69,17 @@
       line-height: 1.31;
   }
 
+.logo-image {
+    width: 199px;
+    height: 50px;
+    display: block;
+}
+
+.header .container {
+    padding-top: 38px;
+    padding-bottom: 38px;
+}
+
+* {
+    outline: 1px solid blue;
+}
