--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,7 +10,7 @@ html {
 body {
   font-family: DM Sans, sans-serif;
   letter-spacing: 0.03em;
-  background-color: $light-bg-color;
+  background-color: $text-color-hero;
 }
 
 ul {
@@ -36,20 +36,16 @@ img {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 98px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media screen and (min-width: 768px) {
-    .container {
-      margin-bottom: 120px;
-    }
+    padding-left: 35px;
+    padding-right: 35px;
   }
-
   @media screen and (min-width: 1200px) {
-    .container {
-      margin-bottom: 125px;
-    }
+    padding-left: 115px;
+    padding-right: 115px;
   }
 }
 p {
