--- a/src/sass/layout/_how-it`s-made.scss
+++ b/src/sass/layout/_how-it`s-made.scss
@@ -2,22 +2,16 @@
   position: relative;
   padding-top: 125px;
   padding-bottom: 145px;
-  padding-left: 20px;
-  padding-right: 20px;
 
   background-color: $bg-color;
 
   @media screen and (min-width: 768px) {
     padding-top: 130px;
-    padding-right: 36px;
     padding-bottom: 242px;
-    padding-left: 36px;
   }
   @media screen and (min-width: 1200px) {
     padding-top: 125px;
-    padding-right: 115px;
     padding-bottom: 314px;
-    padding-left: 115px;
   }
 }
 .hm-backgroung-image {
@@ -194,7 +188,7 @@
   }
   &:hover,
   &:focus {
-    background-color: #ecebeb;
+    background-color: $hover-botton-bgcolor;
   }
 }
 
@@ -295,7 +289,7 @@
   font-size: 12px;
   line-height: 1.7;
 
-  color: #000000;
+  color: $primari-text-color;
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
@@ -310,6 +304,6 @@
 .hm-collage {
   position: absolute;
   top: 100%;
-  left: 0;
-  transform: translate(0, -40%);
+  left: 50%;
+  transform: translate(-50%, -40%);
 }
