--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,18 +3,12 @@ footer {
 }
 
 /* Забрала крапочки в cписку */
-ul {
-  list-style: none;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
 .footer-container {
   display: block;
 
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
   }
 }
 
@@ -34,7 +28,6 @@ ul {
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 97px;
-    margin-left: 114px;
   }
 }
 
@@ -93,18 +86,6 @@ ul {
     font-size: 58px;
     letter-spacing: 0.06em;
     margin-bottom: 0;
-  }
-}
-
-ul {
-  padding: 0;
-}
-
-.social-link-block {
-  display: block;
-
-  @media screen and (min-width: 1200px) {
-    margin-right: 114px;
   }
 }
 
@@ -168,7 +149,7 @@ ul {
 
 .join {
   flex-wrap: nowrap;
-
+  text-align: end;
   font-family: DM Sans;
   font-style: normal;
   font-weight: bold;
@@ -178,10 +159,9 @@ ul {
 
   @media screen and (min-width: 320px) {
     font-size: 12px;
-    line-height: 186%;
+    line-height: 1.86;
 
-    margin-left: 40px;
-    margin-bottom: 43px;
+    padding-bottom: 43px;
   }
 
   @media screen and (min-width: 768px) {
@@ -200,16 +180,13 @@ ul {
   }
 }
 
-a {
-  text-decoration: none;
-}
-
 .phone-number {
   color: $title-text-color;
 }
 
 .rights-reserved {
   display: block;
+  background-color: $bg-color;
   border-top: 1px solid $border-slider;
 
   width: 100%;
@@ -218,7 +195,6 @@ a {
   text-align: center;
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
-    margin-bottom: 25px;
     height: 90px;
   }
 
@@ -229,10 +205,6 @@ a {
   @media screen and (min-width: 1200px) {
     height: 45px;
   }
-}
-
-p {
-  margin: 0;
 }
 
 .rights-reserves-text {
