--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,101 +1,63 @@
 <footer class="footer-css">
   <div class="container">
-    <div class="footer-tablet">
-      <div class="left-footer">
-        <a href="./" lang="en" class="logo-style footer link"
-          ><span class="logo-accent link">Web</span>Studio</a
-        >
-        <address class="adress">
-          <p class="adress-footer">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list footer-adress">
-            <li class="contact-footer">
-              <a href="tel:+380961111111" class="link link-contact"
-                >+38 096 111 11 11</a
-              >
-            </li>
-            <li class="contact-footer">
-              <a href="mailto:info@devstudio.com" class="link link-contact"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="social-net">
-        <p class="join">присоединяйтесь</p>
-        <ul class="list social-icons">
-          <li class="social-icons-item">
-            <a
-              class="social-icons-link icons-footer"
-              href="https://instagram.com/"
-              target="_blank"
-              rel="noopener noreferer"
-              aria-label="Instagram"
-            >
-              <svg class="social-icons-svg footer-svg">
-                <use href="./icons/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icons-item">
-            <a
-              class="social-icons-link icons-footer"
-              href="https://twitter.com/"
-              target="_blank"
-              rel="noopener noreferer"
-              aria-label="Twitter"
-            >
-              <svg class="social-icons-svg footer-svg">
-                <use href="./icons/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icons-item">
-            <a
-              class="social-icons-link icons-footer"
-              href="https://facebook.com/"
-              target="_blank"
-              rel="noopener noreferer"
-              aria-label="Facebook"
-            >
-              <svg class="social-icons-svg footer-svg">
-                <use href="./icons/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-icons-item">
-            <a
-              class="social-icons-link icons-footer"
-              href="https://linkedin.com/"
-              target="_blank"
-              rel="noopener noreferer"
-              aria-label="Linkedin"
-            >
-              <svg class="social-icons-svg footer-svg">
-                <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+    <div class="description">
+      <p>homemade ice cream made</p>
+      <p>with passion</p>
     </div>
-    <div class="subscribe">
-      <p class="join">Подпишись на рассылку</p>
-      <form class="form subscribe-form" autocomplete="off">
-        <input
-          type=" text"
-          name="mailing"
-          id="mailing"
-          placeholder="E-mail"
-          class="mailing-input"
-        />
-        <button type="submit" class="mailing-btn">
-          Подписаться
-          <svg class="send-icon">
-            <use href="./icons/symbol-defs.svg#icon-send"></use>
-          </svg>
-        </button>
-      </form>
+
+    <div class="social-net">
+      <ul class="list social-icons">
+        <li class="social-icons-item">
+          <a
+            class="social-icons-link"
+            href="https://github.com/"
+            target="_blank"
+            rel="noopener noreferer"
+            aria-label="Github"
+          >
+            <svg class="social-icons-svg">
+              <use href="./images/vector/icon-sprite.svg#icon-github1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-icons-item">
+          <a
+            class="social-icons-link"
+            href="https://telegram.com/"
+            target="_blank"
+            rel="noopener noreferer"
+            aria-label="Telegram"
+          >
+            <svg class="social-icons-svg">
+              <use href="images/vector/icon-sprite.svg#icon-telegram1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-icons-item">
+          <a
+            class="social-icons-link"
+            href="https://facebook.com/"
+            target="_blank"
+            rel="noopener noreferer"
+            aria-label="Facebook"
+          >
+            <svg class="social-icons-svg">
+              <use href="images/vector/icon-sprite.svg#icon-facebook1"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
+
+    <p>
+      Feel free to contact
+      <a href="tel:+610383766284" class="link"> +61 (0) 383 766 284</a>
+    </p>
+
+    <p>
+      © <time datetime="2019">2019</time>
+      - IceCream.
+      <span> All Rights Reserved.</span>
+    </p>
   </div>
 </footer>
