added hero section

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -7,6 +7,8 @@
     left: 0;
     right: 0;
 
+    z-index: 2;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,11 +19,12 @@
     padding: 6px 15px;
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
+      max-width: 1199px;
       padding: 37px 34px 0px;
     }
 
     @media screen and (min-width: 1200px) {
-      width: 1200px;
+      max-width: 1200px;
       padding: 37px 46px 0px;
     }
   }
