--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -3,6 +3,9 @@
   position: absolute;
   top: 0;
   right: 0;
+
+  z-index: 3;
+
   text-align: center;
 
   margin-left: auto;
@@ -23,7 +26,7 @@
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: 254px;
+    width: 260px;
     height: 1020px;
   }
 
