--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,37 +1,36 @@
 html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  ::after,
-  ::before {
-    box-sizing: inherit;
-    // outline: 2px solid red;
-  }
-  
-  body {
-    font-family: $main-font;
-  
-    @include fonts(14px, 400, 1.85, 0.04em);
-  
-    color: $primary-text-color;
-  
-    @include for-size(desktop) {
-      font-size: 16px;
-    }
-  }
-  
-  h1,
-  h2,
-  h3 {
-    margin-top: 0;
-    font-family: $second-font;
-  }
+  box-sizing: border-box;
+}
 
-  p {
-    margin-top: 0;
-  }
+*,
+::after,
+::before {
+  box-sizing: inherit;
+  // outline: 2px solid red;
+}
 
+body {
+  font-family: $main-font;
+
+  @include fonts(14px, 400, 1.85, 0.04em);
+
+  color: $primary-text-color;
+
+  @include for-size(desktop) {
+    font-size: 16px;
+  }
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0;
+  font-family: $second-font;
+}
+
+p {
+  margin-top: 0;
+}
 
 *,
 ::after,
@@ -56,7 +55,8 @@ h3 {
   font-family: $second-font;
 }
 p {
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -75,54 +75,44 @@ img {
   max-width: 100%;
   height: auto;
 }
-//   .section {
-//     padding-top: 60px;
-//     padding-bottom: 60px;
-//     @media screen and (min-width: 1200px) {
-//         padding-top: 94px;
-//         padding-bottom: 94px;
-//     }
-// }
- 
-  .container {
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-right: auto;
-    margin-left: auto;
-  
-    @include for-size(mobile) {
-      width: 320px;
-      // padding-left: 15px;
-      // padding-right: 15px;
-    }
-  
-    @include for-size(tablet) {
-      width: 768px;
-  //     padding-left: 39px;
-  //     padding-right: 39px;
-    }
-  
-    @include for-size(desktop) {
-      width: 1080px;
-      // padding-left: 15px;
-      // padding-right: 15px;
-    }
 
+.container {
+  width: 100%;
+  padding: 0 4.44%;
+  margin-right: auto;
+  margin-left: auto;
+
+  @include for-size(mobile) {
+    max-width: 767px;
+    // width: 320px;
+    // padding-left: 15px;
+    // padding-right: 15px;
   }
 
-  // @include for-size(tablet) {
-  //   width: 768px;
-  //   //     padding-left: 39px;
-  //   //     padding-right: 39px;
-  // }
+  @include for-size(tablet) {
+    max-width: 1199px;
+    //     padding-left: 39px;
+    //     padding-right: 39px;
+  }
 
-  // @include for-size(desktop) {
-  //   width: 1200px;
-  //   padding-left: 15px;
-  //   padding-right: 15px;
-  // }
+  @include for-size(desktop) {
+    max-width: 1600px;
+    // padding-left: 15px;
+    // padding-right: 15px;
+  }
+}
 
+// @include for-size(tablet) {
+//   width: 768px;
+//   //     padding-left: 39px;
+//   //     padding-right: 39px;
+// }
+
+// @include for-size(desktop) {
+//   width: 1200px;
+//   padding-left: 15px;
+//   padding-right: 15px;
+// }
 
 //   @include for-size(desktop) {
 //     width: 1080px;
