--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,49 +1,157 @@
 .section-hero {
   width: 100%;
+  margin-block-end: unset;
 
   background-color: #ffb8ca;
 }
 .container-hero {
   position: relative;
-  max-width: 320px;
-  z-index: 1;
 
   margin-left: auto;
   margin-right: auto;
+
   height: 502px;
+
+  overflow: hidden;
+
+  z-index: 1;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 1199px;
+    height: 399px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    height: 665px;
+  }
 }
 
 .title-hero {
   width: 218px;
   padding-top: 193px;
+
   z-index: 1;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 162px;
+    padding-top: 102px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 277px;
+    padding-top: 171px;
+  }
+}
+
+.title-hero > h1 {
+  margin-bottom: 19px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 162px;
+    height: 80px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 25px;
+    height: 137px;
+  }
 }
 
 .picture-ice {
   position: absolute;
-  bottom: 0;
-  right: 32px;
+  right: 33px;
+  bottom: 0%;
+
   width: 171px;
-  // outline: 2px solid teal;
+
   z-index: -1;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    right: 255px;
+    width: 143px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    right: 406px;
+    width: 236px;
+  }
 }
+
+.picture-bgr::before {
+  position: absolute;
+  top: -3.5%;
+  right: -52%;
+
+  display: block;
+  content: '';
+  width: 346px;
+  height: 344px;
+  border-radius: 50%;
+  background-color: $primary-accent-color;
+
+  z-index: -1;
+
+  @include for-size(tablet) {
+    top: -7.5%;
+    right: -85%;
+
+    width: 324px;
+    height: 322px;
+  }
+
+  @include for-size(desktop) {
+    top: -10.5%;
+    right: -82%;
+
+    width: 538px;
+    height: 538px;
+  }
+}
+
 .title-hero-white {
+  display: block;
+  font-weight: 400;
   font-size: 26px;
   line-height: 1.15;
+  letter-spacing: 0.04em;
   color: $primary-white-color;
   text-transform: uppercase;
-  font-weight: 400;
+
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    font-size: 22px;
+    line-height: 1.14;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 38px;
+    line-height: 1.16;
+  }
 }
+
 .title-hero-rose {
+  display: inline-block;
+  font-weight: 400;
   font-size: 48px;
   line-height: 0.96;
+  letter-spacing: 0;
   color: $accent-color;
   text-transform: uppercase;
-  font-weight: 400;
+
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    font-size: 34px;
+    line-height: 0.96;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 0.87;
+  }
 }
 
 .buttons-hero {
   display: flex;
+
   li:not(:last-child) {
     margin-right: 8px;
   }
@@ -51,8 +159,7 @@
 
 .button-product {
   height: 24px;
-  width: 61px;
-  font-weight: bold;
+  width: 62px;
   font-size: 16px;
   line-height: 21px;
   border-radius: 22px;
@@ -62,11 +169,19 @@
   color: $primary-white-color;
   background-color: $accent-color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1199px) {
+    width: 138px;
+    height: 40px;
+
+    font-size: 14px;
+    line-height: 1.28;
+  }
 }
 
 .button-made {
   height: 24px;
-  width: 83px;
+  width: 82px;
 
   font-size: 16px;
   line-height: 21px;
@@ -78,56 +193,230 @@
   color: $accent-color;
   background-color: $primary-white-color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1199px) {
+    width: 138px;
+    height: 40px;
+
+    font-size: 14px;
+    line-height: 1.28;
+  }
 }
 
-// .overlay {
-//   text-align: center;
-//   max-width: 320px;
-// //   height: 502px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   background:$background-header-hero;
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-size: contain;
-// background-image: url('../images/hero/ice-s/ice-mob.png');
+.picture-milk {
+  display: block;
+  width: 188px;
 
-//         @media screen and (min-device-pixel-ratio: 2),
-//               screen and (-webkit-min-device-pixel-ratio: 2),
-//               screen and (-o-min-device-pixel-ratio: 2/1),
-//               screen and (min-resolution: 192dpi),
-//               screen and (min-resolution: 2dppx) {
+  padding-top: 56px;
 
-//               background-image: url('../images/hero/ice-s/ice-mob@2x.png');
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-//             }
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 124px;
+    padding-top: 19px;
+  }
+}
 
-//     @media screen and (min-width: 768px) {
-//         max-width: 768px;
-//       //   height: 399px;
+.info-milk {
+  position: absolute;
+  bottom: 39px;
+  left: 156px;
 
-//         background-image: url('../images/hero/ice-s/ice-tab.png');
-//         @media screen and (min-device-pixel-ratio: 2),
-//               screen and (-webkit-min-device-pixel-ratio: 2),
-//               screen and (-o-min-device-pixel-ratio: 2/1),
-//               screen and (min-resolution: 192dpi),
-//               screen and (min-resolution: 2dppx) {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-//               background-image: url('../images/hero/ice-s/ice-tab@2x.png');
-//         }
-//     }
-//     @media screen and (min-width: 1200px) {
-//         max-width: 1280px;
-//       //   height: 665px;
-//         background-image:
-//                 url('../images/hero/ice-s/ice-desk.png');
-//         @media screen and (min-device-pixel-ratio: 2),
-//               screen and (-webkit-min-device-pixel-ratio: 2),
-//               screen and (-o-min-device-pixel-ratio: 2/1),
-//               screen and (min-resolution: 192dpi),
-//               screen and (min-resolution: 2dppx) {
+  @media screen and (min-width: 1200px) {
+    bottom: 60px;
+    left: 266px;
+  }
 
-//                   background-image:  url('../images/hero/ice-s/ice-desk@2x.png');
-//         }
-//      }
-//     }
+  .info-text {
+    width: 114px;
+    height: 48px;
+
+    margin-block-end: unset;
+    margin-bottom: 7px;
+
+    font-size: 8px;
+    line-height: 1.5;
+    letter-spacing: 0;
+    color: $primary-white-color;
+
+    @media screen and (min-width: 1200px) {
+      width: 200px;
+      height: 78px;
+
+      font-size: 14px;
+      line-height: 1.4;
+    }
+  }
+}
+
+.info-link {
+  display: block;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  width: 26px;
+  height: 26px;
+  background-color: $primary-white-color;
+  border-radius: 50%;
+
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 18px;
+    height: 18px;
+  }
+
+  &__icon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 13px;
+    max-height: 12px;
+    fill: $accent-color;
+    transition-duration: 250ms;
+    transition-timing-function: linear;
+
+    &.icon-tablet {
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        display: block;
+      }
+      @media screen and (min-width: 1200px) {
+        display: none;
+      }
+    }
+    &.icon-desktop {
+      @media screen and (min-width: 767px) and (max-width: 1199px) {
+        display: none;
+      }
+      @media screen and (min-width: 1200px) {
+        display: block;
+      }
+    }
+  }
+
+  &:hover {
+    transform: rotate(360deg) scale(1.1);
+  }
+
+  &:hover .info-link__icon {
+    transform: scale(1.1);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
+
+  &:hover .info-link__icon,
+  &:focus .info-link__icon {
+    fill: $primary-white-color;
+  }
+}
+
+.picture-girl {
+  position: absolute;
+  bottom: 0px;
+  right: 34px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 168px;
+    height: 133px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 293px;
+    height: 232px;
+    right: 55px;
+  }
+}
+
+.decorate {
+  position: absolute;
+  top: 94px;
+  right: 44px;
+
+  width: 51px;
+  height: 100px;
+
+  @include for-size(mobile-only) {
+    display: none;
+  }
+
+  @media screen and (min-width: 1200px) {
+    top: 156px;
+    right: 57px;
+
+    width: 92px;
+    height: 168px;
+  }
+}
+
+.decor.list {
+  display: flex;
+  flex-direction: column;
+  text-align: end;
+}
+
+.decor-item {
+  position: relative;
+}
+
+.decor-item::before {
+  position: absolute;
+  top: -3px;
+  right: -10px;
+  z-index: -1;
+
+  display: block;
+  content: '';
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: $primary-white-color;
+
+  @media screen and (min-width: 1200px) {
+    top: -8px;
+    right: -16px;
+
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.decor-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.decor-number {
+  font-family: $second-font;
+  font-size: 28px;
+  line-height: 1.14;
+  color: $accent-color;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 46px;
+    line-height: 1.15;
+  }
+}
+
+.decor-text {
+  font-size: 8px;
+  line-height: 1.25;
+  color: $primary-white-color;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
