меняет анимацию заголовка

--- a/src/sass/utils/_animations.scss
+++ b/src/sass/utils/_animations.scss
@@ -11,7 +11,7 @@
 
 [data-aos='products-card-title-animation'] {
   &.aos-animate {
-    animation: products-card-title-animation 250ms
+    animation: products-card-title-animation 1s
       cubic-bezier(0.215, 0.61, 0.355, 1) both;
   }
 }
@@ -24,7 +24,7 @@
     opacity: 0;
   }
   40% {
-    opacity: 0.6;
+    opacity: 0.3;
   }
   100% {
     -webkit-transform: translateZ(0) translateY(0);
