--- a/src/partials/section-pictures.html
+++ b/src/partials/section-pictures.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container section-pictures">
   <div class="pictures-container">
   <div class="img-one">
     <picture>
