--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -53,10 +53,12 @@ h2,
 h3 {
   margin-top: 0;
   font-family: $second-font;
+  font-weight: normal;
 }
 p {
   margin: 0;
   padding: 0;
+  font-weight: normal;
 }
 
 .visually-hidden {
@@ -96,29 +98,11 @@ img {
   }
 
   @include for-size(desktop) {
-    max-width: 1600px;
+    max-width: 1200px;
     // padding-left: 15px;
     // padding-right: 15px;
   }
 }
-
-// @include for-size(tablet) {
-//   width: 768px;
-//   //     padding-left: 39px;
-//   //     padding-right: 39px;
-// }
-
-// @include for-size(desktop) {
-//   width: 1200px;
-//   padding-left: 15px;
-//   padding-right: 15px;
-// }
-
-//   @include for-size(desktop) {
-//     width: 1080px;
-//     padding-left: 15px;
-//     padding-right: 15px;
-//   }
 
 .list {
   list-style: none;
