начало работы над таблеткой

--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -1,9 +1,12 @@
+* {
+  outline: 1px solid red;
+}
 .manufacture-container {
   margin: 0 auto;
   width: 100%;
 
   @media screen and (min-width: 320px) {
-    max-width: 320px;
+    width: 320px;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -36,6 +39,7 @@
   background-color: $footer-bg;
   padding-top: 125px;
   padding-bottom: 97px;
+
   @media screen and (max-width: 767px) {
     letter-spacing: 0;
   }
@@ -49,10 +53,15 @@
     padding-top: 125px;
   }
 }
-.manufacture-main-text {
-  margin-right: 41px;
-  margin-left: 39px;
-}
+// .manufacture-main-text {
+//   margin-right: 41px;
+//   margin-left: 39px;
+
+//   @media screen and (min-width: 768px) {
+//     margin-right: 147px;
+//     margin-left: 152px;
+//   }
+// }
 .manufacture-title {
   padding-bottom: 15px;
   font-family: Titan One;
@@ -66,6 +75,7 @@
 
   @media screen and(min-width:768px) {
     font-size: 26px;
+    line-height: 1.153;
   }
 }
 
@@ -83,17 +93,21 @@
 
   @media screen and(min-width:768px) {
     font-size: 48px;
+    margin-bottom: 50px;
   }
 }
 
 .mnf-box {
-  @media screen and(min-width:768px) {
+  @media screen and (min-width: 768px) {
     display: flex;
   }
 }
-.mnf-box {
-  margin-bottom: 39px;
+
+.mnf-box .content-box {
+  display: inline-block;
+  flex-basis: calc(100% / 2);
 }
+
 .manufacture-box {
   width: 280px;
   height: 100%;
@@ -102,6 +116,15 @@
   margin-bottom: 46px;
 }
 
+.cow-pic {
+  @media screen and (min-width: 768px) {
+    width: 340px;
+  }
+}
+
+.manufacture-box picture {
+  width: 340px;
+}
 .manufacture-bg {
   padding-left: 30px;
   padding-right: 30px;
@@ -111,10 +134,14 @@
     background-position-y: bottom;
     background-size: contain;
   }
+  @media screen and (min-width: 768px) {
+    padding-left: 8px;
+    padding-right: 0;
+  }
 }
 
 .manufacture-text {
-  margin-bottom: 45px;
+  margin-bottom: 35px;
 
   font-family: DM Sans;
   font-style: normal;
@@ -127,6 +154,8 @@
 
   @media screen and(min-width:768px) {
     font-size: 14px;
+    margin-top: 50px;
+    line-height: 1.785;
   }
 }
 
@@ -142,6 +171,7 @@
 
   @media screen and(min-width:768px) {
     font-size: 14px;
+    line-height: 1.785;
   }
 }
 
@@ -151,6 +181,7 @@
 
 .button-manufacture {
   display: inline-flex;
+  margin-bottom: 39px;
   margin-left: 30px;
   margin-right: 74px;
 
@@ -251,4 +282,6 @@
   display: inline-block;
   width: 364px;
   height: auto;
+  position: relative;
+  left: -18px;
 }
