--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -6,18 +6,18 @@
   overflow-y: hidden;
 
   @include for-size(tablet) {
-    height: 399px;
+    height: 317px;
+    overflow: visible;
   }
   @include for-size(desktop) {
-    height: 665px;
+    height: 531px;
+    overflow: visible;
   }
 }
 
 .hero-container {
   position: relative;
-  // z-index: 1;
-  z-index: 2;
-  // overflow: hidden;
+  z-index: 10;
   padding-top: 193px;
 
   @include for-size(mobile-only) {
@@ -29,8 +29,12 @@
     // overflow: hidden;
   }
   @include for-size(tablet) {
-    padding-top: 102px;
+    padding-top: 0px;
     padding-left: 34px;
+  }
+  @include for-size(desktop) {
+    padding-top: 41px;
+    padding-left: 40px;
   }
 }
 
@@ -58,6 +62,7 @@
     font-size: 38px;
     line-height: 1.16;
     max-width: 277px;
+    margin-bottom: 25px;
   }
 }
 
@@ -84,7 +89,10 @@
 
 .hero-amount-wrap {
   margin-left: auto;
-  margin-right: 43px;
+  margin-right: 0px;
+  @include for-size(desktop) {
+    margin-right: 20px;
+  }
 }
 
 .hero-number {
@@ -115,7 +123,7 @@
 
   position: absolute;
   left: 41px;
-  bottom: 18px;
+  bottom: 15px;
   z-index: -1;
 
   @include for-size(desktop) {
@@ -201,6 +209,8 @@
     font-size: 14px;
     line-height: 1.4;
     width: 200px;
+    margin-left: 180px;
+    margin-top: 112px;
   }
 }
 
@@ -213,14 +223,22 @@
   height: 345px;
   background-color: $second-text-color;
   border-radius: 50%;
-  z-index: -1;
-  // z-index: -1;
+  z-index: 0;
 
   @include for-size(tablet) {
     width: 323px;
     height: 323px;
-    top: 31px;
-    left: 307px;
+    // top: -59px;
+    // left: 318px;
+    top: -19%;
+    left: 41%;
+  }
+  @include for-size(desktop) {
+    width: 538px;
+    height: 538px;
+    top: -75px;
+    // left: 380px;
+    left: 36%;
   }
 }
 
@@ -240,5 +258,76 @@
   @include for-size(desktop) {
     width: 26px;
     height: 26px;
+    margin-left: 180px;
+  }
+}
+
+.hero-icecream {
+  position: absolute;
+  z-index: 2;
+  @include for-size(tablet) {
+    width: 143px;
+    height: 336px;
+    top: -19px;
+    // left: 390px;
+    left: 50%;
+  }
+
+  @include for-size(desktop) {
+    width: 236px;
+    height: 557px;
+    top: -27px;
+    // left: 500px;
+    left: 47%;
+  }
+}
+
+.hero-milkjar {
+  position: absolute;
+  z-index: 2;
+  display: none;
+  @include for-size(tablet) {
+    display: block;
+    width: 124px;
+    height: 126px;
+    // top: 145px;
+    // left: 30px;
+    top: -45px;
+    left: -1px;
+  }
+
+  @include for-size(desktop) {
+    width: 188px;
+    height: 191px;
+    // top: 290px;
+    // left: 20px;
+    top: -75px;
+    left: -20px;
+  }
+}
+
+.hero-text-wrap {
+  position: relative;
+}
+
+.hero-girl {
+  position: absolute;
+  z-index: 2;
+  display: none;
+  @include for-size(tablet) {
+    display: block;
+    width: 168px;
+    height: 133px;
+    top: 184px;
+    // left: 565px;
+    left: 75%;
+  }
+
+  @include for-size(desktop) {
+    width: 293px;
+    height: 232px;
+    top: 299px;
+    // left: 755px;
+    left: 72%;
   }
 }
