Добавляет стилизацию header

--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -15,6 +15,7 @@ $colors: (
   'socials': #fea5bb,
   'lightBgrd': #fff5f6,
   'btncolor': #ffffff,
+  'bgcmobile':#E17992,
 );
 @function getColor($key) {
   @return map-get($colors, $key);
