--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,7 +3,7 @@
         <div class="modal-icon">
             <button data-modal-close class="button btn-close">
                 <svg class="icon-exit" width="11" height="11">
-                    <!-- <use href='/images/icons/symbolall.svg#icon-close'></use> -->
+                    <use href='/images/icons/symbolall.svg#icon-close'></use>
 
                 </svg>
             </button>
@@ -17,7 +17,7 @@
                     <label class="form-label" for="name"></label>
                     <input type="text" class=" form-input form-no" name="user-name" id="name" placeholder="Имя" />
                     <svg class="form-icon" width="18" height="18">
-                        <!-- <use href='/images/icons/symbolall.svg#icon-person'></use> -->
+                        <use href='/images/icons/symbolall.svg#icon-person'></use>
 
                     </svg>
                 </div>
@@ -26,7 +26,7 @@
                     <input type="tel" class=" form-input form-no" name="tel" id="tel" placeholder="Телефон"
                         autocomplete="off" />
                     <svg class="form-icon" width="18" height="18">
-                        <!-- <use href='/images/icons/symbolall.svg#icon-phone'></use> -->
+                        <use href='/images/icons/symbolall.svg#icon-phone'></use>
 
                     </svg>
                 </div>
@@ -48,7 +48,7 @@
                             class=" link span-check"> Политикой конфиденциальности</a>
                     </label>
 
-                    <button class=" btn-secondary btn_modal" type="submit">Отправить</button>
+                    <button data-modal-open class=" btn-secondary btn_modal "  type="submit">Отправить</button>
                 </div>
             </form>
         </div>
