змінює стилі точок продажу

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -85,14 +85,18 @@
                 
                 
                 <!-- ТОЧКИ ПРОДАЖУ -->
-                <ul class="sales-points-list">
-                    <li class="points">
-                        <p class="points-number">16</p><p class="points-title">cafes</p>                        
-                    </li>
-                    <li class="points">
-                        <p class="points-number">23</p><p class="points-title">food trucks</p>                        
-                    </li>
-                </ul>
+                <div class="sales-points">
+                    <div class="points caffee">
+                        <p class="points-number">16</p>
+                        <p class="points-title">cafes</p>                        
+                    </div>
+                    <div class="points tracks">
+                        <p class="points-number">23</p>
+                        <p class="points-title">food trucks</p>                        
+                    </div>
+                </div>
+                <img src="./../images/hero/milk_tablet.png" alt="ellipse"/>
+
                 <!--<picture class="milk">
                     <source srcset="././images/hero/milk_tablet.png 1x, ././images/hero/milk_tablet@2x.png 2x" media="(max-width: 1199px)"/>
                     <source srcset="././images/hero/milk_desktop.png 1x, ././images/hero/milk_desktop@2x.png 2x"  media="(min-width: 1200px)"/>
