--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,8 +3,18 @@
 
     justify-content: space-between;
 
+    padding-top: 12px;
+
     @media screen  and (min-width:768px){
+        padding-left: 19px;
+        padding-right: 10px;
+    }
+
+
+    @media screen  and (min-width:1200px){
         padding-top: 3px;
+        padding-left: 95px;
+        padding-right: 0px;
     }
 
 }
@@ -14,7 +24,7 @@
     margin-top: 137px;
 
     @media screen  and (min-width:768px) and (max-width: 1199px){
-       margin-top: 12px;
+       margin-top: 3px;
     }
 
     @media screen  and (min-width:1200px){
@@ -185,48 +195,84 @@
 
 }
 
-.sales-points-list {
+.sales-points {
     display: none;
 
     @media screen  and (min-width:768px){
-        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
 
-        margin-right: 19px;
+        
+
+
     }
     @media screen  and (min-width:1200px){
         margin-top: 78px;
-        margin-right: 100px;
+        
+        
+ 
     }
 }
 
 
-.points:not(:last-child){
-    margin-bottom: 14px;
-
-    @media screen  and (min-width:1200px){
-        margin-bottom: 30px;
-    }
-}
 
 .points {
+    position: relative;
+    z-index: 10;
     
     width: 51px;
     height: 43px;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: -10%;
+        right: -15%;
+
+        z-index: 1;
+               
+
+        width: 16px;
+        height: 16px;
+
+        background-color: $text-color-hero;
+
+        border-radius: 50%;
+
+        @media screen  and (min-width:1200px){
+            width: 30px;
+            height: 30px;
+
+        }
+    }
+
+    @media screen  and (min-width:1200px){
+        
+        width: 92px;
+        height: 77px;
+    }
+
+   
 
     /*display: flex;
     justify-content: center;
     flex-direction: column;*/
 
+    
+    
+
     @media screen  and (min-width:1200px){
-        width: 92x;
+        
         height: 76x;
 
-        padding-right: 18px;
+       /*padding-right: 18px;*/
 
     }
 
     &-number{
         position: relative;
+       
         z-index: 10;
 
         margin: 0;
@@ -242,28 +288,6 @@
                                                                     
         color: $title-text-color;
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: -10%;
-            right: -10%;
-
-            z-index: -11;
-            
-
-            width: 16px;
-            height: 16px;
-
-            background-color: $text-color-hero;
-
-            border-radius: 50%;
-
-            @media screen  and (min-width:1200px){
-                width: 30x;
-                height: 30px;
-
-            }
-        }
 
         @media screen  and (min-width:1200px){
             font-size: 46px;
@@ -291,4 +315,10 @@
         }
     } 
 }   
+.caffee{
+    margin-bottom: 14px;
 
+    @media screen  and (min-width:1200px){
+        margin-bottom: 30px;
+    }
+}
