--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -221,6 +221,7 @@ img {
 @media screen and (min-width: 1200px) {
   .head-container {
     height: 665px;
+    padding-right: 115px;
   }
 }
 
@@ -260,7 +261,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .buy-btn--nmob {
-    margin-right: 100px;
+    margin-right: 0px;
   }
 }
 
@@ -305,6 +306,12 @@ img {
   .nav {
     padding-right: 19px;
     padding-left: 19px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    padding-right: 0px;
   }
 }
 
@@ -451,11 +458,21 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-top: 12px;
 }
 
 @media screen and (min-width: 768px) {
   .hero {
+    padding-left: 19px;
+    padding-right: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
     padding-top: 3px;
+    padding-left: 95px;
+    padding-right: 0px;
   }
 }
 
@@ -465,7 +482,7 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .title-block {
-    margin-top: 12px;
+    margin-top: 3px;
   }
 }
 
@@ -655,35 +672,34 @@ img {
   }
 }
 
-.sales-points-list {
+.sales-points {
   display: none;
 }
 
 @media screen and (min-width: 768px) {
-  .sales-points-list {
-    display: block;
-    margin-right: 19px;
+  .sales-points {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .sales-points-list {
+  .sales-points {
     margin-top: 78px;
-    margin-right: 100px;
-  }
-}
-
-.points:not(:last-child) {
-  margin-bottom: 14px;
-}
-
-@media screen and (min-width: 1200px) {
-  .points:not(:last-child) {
-    margin-bottom: 30px;
   }
 }
 
 .points {
+  position: relative;
+  z-index: 10;
   width: 51px;
   height: 43px;
   /*display: flex;
@@ -691,11 +707,36 @@ img {
     flex-direction: column;*/
 }
 
+.points::before {
+  content: '';
+  position: absolute;
+  top: -10%;
+  right: -15%;
+  z-index: 1;
+  width: 16px;
+  height: 16px;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 1200px) {
+  .points::before {
+    width: 30px;
+    height: 30px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .points {
-    width: 92x;
+    width: 92px;
+    height: 77px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .points {
     height: 76x;
-    padding-right: 18px;
+    /*padding-right: 18px;*/
   }
 }
 
@@ -710,25 +751,6 @@ img {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #D41443;
-}
-
-.points-number::before {
-  content: '';
-  position: absolute;
-  top: -10%;
-  right: -10%;
-  z-index: -11;
-  width: 16px;
-  height: 16px;
-  background-color: #FFFFFF;
-  border-radius: 50%;
-}
-
-@media screen and (min-width: 1200px) {
-  .points-number::before {
-    width: 30x;
-    height: 30px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -752,6 +774,16 @@ img {
     margin-top: 2px;
     font-size: 14px;
     line-height: 1.2857;
+  }
+}
+
+.caffee {
+  margin-bottom: 14px;
+}
+
+@media screen and (min-width: 1200px) {
+  .caffee {
+    margin-bottom: 30px;
   }
 }
 /*# sourceMappingURL=main.css.map */
