Отключает анимацию при скролле на мобильном

--- a/src/sass/utils/_animations.scss
+++ b/src/sass/utils/_animations.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 767px) {
+  [data-aos-duration] {
+    transition-duration: 0s !important;
+  }
+}
+
 [data-aos='products-card-animation'] {
   transform: rotateY(0);
   transform-origin: right;
