--- a/src/sass/layouts/_how-made.scss
+++ b/src/sass/layouts/_how-made.scss
@@ -186,3 +186,13 @@ picture {
     fill: $primary-accent;
   }
 }
+.grow {
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.grow:hover,
+.grow:focus {
+  border-radius: 70%;
+}
