--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,13 +3,25 @@
     <div class="container">
       <div class="footer-container">
         <div class="footer-slogan">
-          <p class="footer-homemade">homemade ice cream made</p>
-          <p class="footer-passion">with passion</p>
+          <p
+            class="footer-homemade"
+            data-aos="products-card-title-animation"
+            data-aos-offset="10"
+          >
+            homemade ice cream made
+          </p>
+          <p
+            class="footer-passion"
+            data-aos="products-card-title-animation"
+            data-aos-offset="10"
+          >
+            with passion
+          </p>
         </div>
 
         <div class="footer-contact">
           <ul class="footer-social-icons list">
-            <li class="footer-social-icons-item">
+            <li class="footer-social-icons-item" data-aos="slide-up">
               <a
                 class="footer-social-icons link"
                 href="https://github.com/"
@@ -22,7 +34,11 @@
                 </svg>
               </a>
             </li>
-            <li class="footer-social-icons-item">
+            <li
+              class="footer-social-icons-item"
+              data-aos="slide-up"
+              data-aos-delay="100"
+            >
               <a
                 class="footer-social-icons link"
                 href="https://telegram.org/"
@@ -35,7 +51,11 @@
                 </svg>
               </a>
             </li>
-            <li class="footer-social-icons-item">
+            <li
+              class="footer-social-icons-item"
+              data-aos="slide-up"
+              data-aos-delay="200"
+            >
               <a
                 class="footer-social-icons link"
                 href="https://facebook.com/"
