додає зображення молока

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -70,15 +70,23 @@
                     </div>
 
                     <!-- ВІО ЕКО -->
-                    <div class="bio-eco">
-                        <p class="bio-eco-descr">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                        </p>
-                        <button class="btn-circle">
-                            <svg class="arrow-icon">
-                                <use href="././images/icons/sprite.svg#arrow-icon" width="9px"></use>
-                            </svg>
-                        </button>
+
+                    <div class="bio">
+                        <picture class="milk">
+                            <source srcset="././images/hero/milk_tablet.png 1x, ././images/hero/milk_tablet@2x.png 2x" media="(max-width: 1199px)"/>
+                            <source srcset="././images/hero/milk_desktop.png 1x, ././images/hero/milk_desktop@2x.png 2x" media="(min-width: 1200px)"/>
+                            <img src="././images/hero/milk_tablet.png" alt="milk"/>
+                        </picture>
+                        <div class="bio-eco">
+                            <p class="bio-eco-descr">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                            </p>
+                            <button class="btn-circle">
+                                <svg class="arrow-icon">
+                                    <use href="././images/icons/sprite.svg#arrow-icon" width="9px"></use>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -95,7 +103,8 @@
                         <p class="points-title">food trucks</p>                        
                     </div>
                 </div>
-                <img src="././images/hero/milk_tablet.png" alt="ellipse"/>
+                
+               
                 
 
                 <!--<picture class="milk">
