--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -13,7 +13,7 @@
 
     @media screen  and (min-width:1200px){
         padding-top: 3px;
-        padding-left: 95px;
+       
         padding-right: 0px;
     }
 
@@ -29,6 +29,7 @@
 
     @media screen  and (min-width:1200px){
         margin-top: 84px;
+        padding-left: 95px;
     }
 }
 
@@ -124,18 +125,42 @@
         }
     }
 }
+.bio {
+    display: none;
 
+    @media screen  and (min-width:768px){
+        display: flex; 
+        align-items: flex-end;
+        margin-top: 19px; 
+        height: 126px;
+    }
+    @media screen  and (min-width:1200px){
+        margin-top: 56px;
+        height: 191px;
+    }    
+}
+.milk {
+    display: block;
+    width: 120px;
+    height: 100%;
+
+    @media screen  and (min-width:1200px){
+       width: 188px;
+    }
+    
+}
 .bio-eco {
     display: none;
 
     @media screen  and (min-width:768px){
         display: flex;  
-        flex-direction: column; 
-        margin-top: 19px;   
+        flex-direction: column;
+        padding-top: 47px;     
     }
     @media screen  and (min-width:1200px){
-        margin-top: 54px;
+        padding-top: 55px;
     }
+   
 }
 
 
@@ -153,6 +178,7 @@
         width: 26px;
         height: 26px;
     }
+    
 
 }
 
@@ -163,8 +189,8 @@
 
     padding: 0;
     margin: 0;
-    margin-top: 45px;
     margin-bottom: 7px;
+    
 
     font-family: DM Sans;
     font-weight: 400;
@@ -173,7 +199,10 @@
     color: $text-color-hero;
 
     @media screen  and (min-width:1200px){
+        margin-top: 0;
+               
         margin-bottom: 20px;
+       
         width: 200px;
 
         font-size: 14px;    
