--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -15,7 +15,7 @@
                 <div class="sl__text">
                     <p class="sl__desc">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
                 </div>
-                
+                <img src="./images/testimonuals/Group.png" alt="точки" class="sl__dot">
                 <h3 class="sl__name">Emily, Los Angeles</h3>
                 <div class="sl__points">
                 <div class="sl__points-home icon">
@@ -35,11 +35,11 @@
                     alt="фото человека, который оставил отзыв"
                     width="85"
                 />
-    
+                
                 <div class="sl__text">
                     <p class="sl__desc">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
                 </div>
-                
+                <img src="./images/testimonuals/Group.png" alt="точки" class="sl__dot">
                 <h3 class="sl__name">Emily, Los Angeles</h3>
                 <div class="sl__points">
                 <div class="sl__points-icon icon"></div>
