Новая ветка, начало оформления ссылки

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -15,13 +15,16 @@
               </div>
             </div>
 
-            <p class="products-gallery-text arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            <p class="products-gallery-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod
               tempor incididunt ut labore et. dolore magna
               aliqua facilisis.</p>
-            <p class="products-gallery-text-short arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <p class="products-gallery-text-short ">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do eiusmod
               tempor incididunt ut labore et.</p>
+            <a class="products-link" href="http://ice-cream" target="_blank" rel="ice cream" aria-label="ice cream">
+
+            </a>
 
             <picture class="products-foto products-foto-first">
               <source srcset="
