--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -246,20 +246,20 @@
     text-align: center;
 
 
-    &::after {
-      display: block;
-      content: '';
-      width: 40px;
-      height: 40px;
-      background-color: $white;
-      border-radius: 50%;
-      background-size: 40px 40px;
-      background-repeat: no-repeat;
-      background-position: center;
-      margin-top: 40px;
-      margin-left: auto;
-      margin-right: auto;
-    }
+    // &::after {
+    //   display: block;
+    //   content: '';
+    //   width: 40px;
+    //   height: 40px;
+    //   background-color: $white;
+    //   border-radius: 50%;
+    //   background-size: 40px 40px;
+    //   background-repeat: no-repeat;
+    //   background-position: center;
+    //   margin-top: 40px;
+    //   margin-left: auto;
+    //   margin-right: auto;
+    // }
   }
 }
 
@@ -271,28 +271,32 @@
       line-height: 1.69;
       letter-spacing: 0.04em;
 
-       &::after {
-      display: block;
-      content: '';
-      width: 40px;
-      height: 40px;
-      background-color: $white;
-      border-radius: 50%;
-      background-size: 40px 40px;
-      background-repeat: no-repeat;
-      background-position: center;
-      margin-top: 62px;
+    //    &::after {
+    //   display: block;
+    //   content: '';
+    //   width: 40px;
+    //   height: 40px;
+    //   background-color: $white;
+    //   border-radius: 50%;
+    //   background-size: 40px 40px;
+    //   background-repeat: no-repeat;
+    //   background-position: center;
+    //   margin-top: 62px;
      
-      margin-left: auto;
-      margin-right: auto;
-    }
+    //   margin-left: auto;
+    //   margin-right: auto;
+    // }
 
     }
 }
 
-.arrow-right::after {
+.products-link {
   background-image: url(../images/products/arrow-right.jpg);
 }
+
+// .arrow-right::after {
+//   background-image: url(../images/products/arrow-right.jpg);
+// }
 
 .products-ellipsis {
   display: flex;
