выставил флексы section-locations

--- a/src/sass/layouts/_section-locations.scss
+++ b/src/sass/layouts/_section-locations.scss
@@ -1,12 +1,11 @@
 .location {
   position: relative;
   background-color: $background-made-footer-locations;
-  @include for-size(mobile-only) {
+  @include for-size(mobile) {
     height: 1502px;
   }
   @include for-size(tablet) {
     height: 755px;
-
   }
   @media screen and (min-width: 1200px) {
     background-image: url('/images/locations/locations-desktop.png');
@@ -20,7 +19,6 @@
       background-size: 1280px 382px;
     }
   }
-
 }
 
 .location .location__container {
@@ -30,6 +28,7 @@
   transform: translateX(-50%);
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   @include for-size(tablet) {
     top: -78px;
@@ -38,10 +37,10 @@
     top: -102px;
   }
 }
+
 .location__list {
   margin: 0 auto;
   @include for-size(tablet) {
-
     display: flex;
     flex-wrap: wrap;
     margin-right: -20px;
@@ -51,7 +50,6 @@
     flex-wrap: wrap;
     margin-right: -30px;
   }
-
 }
 .location__item {
   padding: 43px 20px;
