header position absolute + arrow:hover

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,10 +1,14 @@
 .page-header {
-  position: relative;
-
+  position: absolute;
+  z-index: 2;
   padding-top: 6px;
+  max-width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
 
-  background: #ffb8ca;
-
+  /*   background: #ffb8ca;
+ */
   @media screen and(min-width: 768px) {
     padding-top: 37px;
   }
@@ -14,6 +18,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .logo-icon {
   width: 199px;
   height: 50px;
