--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -22,13 +22,15 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
       <button class="hero-arrow ">
         <!--arrow-->
-        &rarr;
+        <svg width="10" height="10" class="hero-arrow-svg">
+          <use href="./images/svg/sprite.svg#icon-button_arrow"></use>
+        </svg>
       </button>
     </div>
 
 
     <!--Icecream and animation circle-->
-    <div class="hero-icecream-container">
+    <div class=" hero-icecream-container">
       <picture class="hero-img">
 
         <source srcset="./images/icecreame_hero.png 1x, 
