додає анімацію тексту

--- a/src/sass/utils/_animations.scss
+++ b/src/sass/utils/_animations.scss
@@ -91,7 +91,12 @@
     opacity: 1;
   }
 }
-
+[data-aos='hero-animation'] {
+  transform: scale(1);
+}
+[data-aos='hero animation'].aos-animate {
+  transform: scale(0.5);
+}
 // Атрибуты которыми задаем параметры анимации элемента
 // <div
 //     data-aos="fade-up"
