--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,32 @@
 <section class="hero">
   <div class="container">
-    <div class="hero-container">
+    <div
+      class="hero-container"
+      data-aos="products-card-title-animation"
+      data-aos-offset="10"
+    >
       <h1 class="page-title">
         ice cream made with <span class="page-title-accent">passion</span>
       </h1>
       <button class="btn-secondary btn-secondary-hero">Products</button>
       <button class="btn-third">How it’s made?</button>
     </div>
-    <div class="hero-capacity">
+    <div
+      class="hero-capacity"
+      data-aos="products-card-title-animation"
+      data-aos-offset="10"
+    >
       <span class="hero-capacity-number">16 </span>
       <p class="hero-capacity-text">cafes</p>
       <span class="hero-capacity-number">23</span>
       <p class="hero-capacity-text">food trucks</p>
     </div>
 
-    <div class="hero-content">
+    <div
+      class="hero-content"
+      data-aos="products-card-title-animation"
+      data-aos-offset="10"
+    >
       <p class="hero-content-text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et
