--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -13,9 +13,9 @@ $colors: (
   'sliderActiv': #d31342,
   'sliderBorder': #e1e1e1,
   'socials': #fea5bb,
-  'lightBgrd': #fff5f6
+  'lightBgrd': #fff5f6,
   'btncolor': #ffffff,
-  'bgcmobile':#E17992,
+  'bgcmobile': #e17992,
   'secondaryBtnActive': #ecebeb,
 );
 
