positioning arrows in percentage

--- a/src/sass/utils/_slick-theme.scss
+++ b/src/sass/utils/_slick-theme.scss
@@ -111,39 +111,23 @@ $slick-opacity-not-active: 0.25 !default;
   width: 20px;
   height: 20px;
   position: absolute;
-  top: 609px;
-  left: 80px;
+  top: 99%;
+  left: 27%;
 
   @media (min-width: 768px) {
-    top: 394px;
-    left: 290px;
+    top: 98.5%;
+    left: 39%;
   }
 
   @media (min-width: 1200px) {
-    top: 375px;
-    left: 455px;
+    top: 98.5%;
+    left: 41%;
   }
 
   &:hover,
   &:focus {
     background-image: url(../images/slider/arrow-back-hover.svg);
-    // display: block;
-    // fill: #ffa5ba;
-    // opacity: 1;
   }
-
-  // left: -25px;
-  // outline: none;
-  // [dir='rtl'] & {
-  //   left: auto;
-  //   right: -25px;
-  // }
-  // &:before {
-  //   content: $slick-prev-character;
-  //   [dir='rtl'] & {
-  //     content: $slick-next-character;
-  //   }
-  // }
 }
 
 .slick-next.slick-arrow {
@@ -153,17 +137,17 @@ $slick-opacity-not-active: 0.25 !default;
   width: 20px;
   height: 20px;
   position: absolute;
-  top: 609px;
-  right: 80px;
+  top: 99%;
+  right: 23%;
 
   @media (min-width: 768px) {
-    top: 394px;
-    right: 290px;
+    top: 98.5%;
+    right: 39%;
   }
 
   @media (min-width: 1200px) {
-    top: 375px;
-    right: 455px;
+    top: 98.5%;
+    right: 41%;
   }
 
   &:hover,
@@ -171,18 +155,6 @@ $slick-opacity-not-active: 0.25 !default;
     background-image: url(../images/slider/arrow-next-hover.svg);
     stroke: #ffa5ba;
   }
-  // right: -25px;
-  // outline: none;
-  // [dir='rtl'] & {
-  //   left: -25px;
-  //   right: auto;
-  // }
-  // &:before {
-  //   content: $slick-next-character;
-  //   [dir='rtl'] & {
-  //     content: $slick-prev-character;
-  //   }
-  // }
 }
 
 /* Dots */
