Позиционируе меню в хедере

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -7,12 +7,12 @@
   z-index: 55;
 }
 .header-wrapper {
-  @include for-size(mobile-only) {
-    position: relative;
-  }
-  @include for-size(tablet) {
-    position: relative;
-  }
+  // @include for-size(mobile-only) {
+  //   position: relative;
+  // }
+  // @include for-size(tablet) {
+  //   position: relative;
+  // }
 }
 .header {
   display: flex;
@@ -24,6 +24,7 @@
     padding-top: 37px;
   }
   @include for-size(desktop) {
+    position: relative;
     padding-top: 37px;
     padding-bottom: 37px;
     justify-content: flex-end;
@@ -33,7 +34,7 @@
   margin-right: auto;
   @include for-size(desktop) {
     position: absolute;
-    left: -5%;
+    left: -6%;
   }
 }
 .header-burger-button {
@@ -108,7 +109,7 @@
   }
   @include for-size(tablet) {
     position: absolute;
-    padding-top: 85px;
+    padding-top: 60px;
 
     background-color: #e17992;
     min-width: 254px;
@@ -124,18 +125,19 @@
     flex-direction: row-reverse;
     align-items: center;
   }
-  // .header-menu-button {
-  //   transition: color 250ms $timing-function,
-  //     background-color 250ms $timing-function;
-  //   @include for-size(tablet) {
-  //     margin-bottom: 19px;
-  //     margin-left: 0px;
-  //   }
-  //   @include for-size(desktop) {
-  //     margin-bottom: 0px;
-  //     margin-left: 110px;
-  //   }
-  // }
+}
+.header-menu.is-open .btn-header {
+  margin-left: 0px;
+  margin-top: 12px;
+  margin-bottom: 19px;
+  @include for-size(tablet) {
+    min-width: 186px;
+  }
+}
+.header-burger-button.is-open {
+  position: absolute;
+  top: 20px;
+  right: 25px;
 }
 // .header-menu-button:hover,
 // .header-menu-button:focus {
