--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,7 @@
         </svg>
       </button>
       <div class="header-menu" data-menu>
-        <button class="btn-header btn">
+        <button class="btn-header btn" data-modal-open>
           Buy now
           <svg class="arrow-svg" aria-label="Переход на мгновенную покупку">
             <use href="../src/images/icons/sprite.svg#tip"></use>
@@ -44,6 +44,12 @@
               <a href="" class="header-navigation-link">Contact</a>
             </li>
           </ul>
+        </div>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button class="btn_close" data-modal-close>X</button>
+            <p class="message">in this window you can buy now</p>
+          </div>
         </div>
       </div>
     </div>
