adds styles for adaptive version of logo-hero block

--- a/src/sass/hero/_hero-container.scss
+++ b/src/sass/hero/_hero-container.scss
@@ -10,6 +10,7 @@
     padding-top: 15px;
     padding-left: 34px;
     padding-bottom: 0px;
+    overflow: visible;
   }
 
   @include for-size(desktop) {
