--- a/src/sass/hero/_hero-ellipse.scss
+++ b/src/sass/hero/_hero-ellipse.scss
@@ -10,10 +10,14 @@
   @include for-size(tablet) {
     width: 324px;
     height: 324px;
+    top: -56px;
+    left: 307px;
   }
 
   @include for-size(desktop) {
     width: 538px;
     height: 538px;
+    top: -35px;
+    left: 475px;
   }
 }
