--- a/src/sass/hero/_hero-logo.scss
+++ b/src/sass/hero/_hero-logo.scss
@@ -2,4 +2,14 @@
   position: absolute;
   top: 36px;
   left: 117px;
+
+  @include for-size(tablet) {
+    top: -25px;
+    left: 378px;
+  }
+
+  @include for-size(desktop) {
+    top: 21px;
+    left: 594px;
+  }
 }
