Убирает лишний марджин

--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -70,6 +70,7 @@
     max-width: 330px;
     min-height: 572px;
     padding: 51px 44px 62px 43px;
+    margin-bottom: 0;
   }
 
   @media screen and (min-width: 1280px) {
